--- a/package.json
+++ b/package.json
@@ -62,18 +62,20 @@
     "react-live": "^4.1.5",
     "react-loading-ui": "^1.3.0",
     "react-lorem-ipsum": "^1.4.10",
+    "react-modal-image": "^2.6.0",
     "react-number-format": "^5.3.1",
     "react-paginate": "^8.2.0",
     "react-portal-tooltip": "^2.4.7",
     "react-pro-sidebar": "^1.1.0-alpha.1",
     "react-redux": "^8.1.2",
-    "react-router-dom": "^6.19.0",
-    "react-scripts": "5.0.1",
+    "react-router-dom": "^6.20.0",
+    "react-scripts": "5.0.0",
     "react-select": "^5.7.4",
     "react-sidebar-ui": "^1.3.3",
     "react-slick": "^0.29.0",
     "react-sortable-hoc": "^2.0.0",
     "react-spaces": "^0.4.1",
+    "react-sparkle": "^2.0.0",
     "react-sparklines": "^1.7.0",
     "react-spinners": "^0.13.8",
     "react-swipeable-views": "^0.14.0",
